<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:fadingEdge="horizontal"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="320dp"
        android:layout_marginTop="530dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/scoreview"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="570dp"
        android:indeterminate="false"
        android:indeterminateTint="@color/progress_color"
        android:max="100"
        android:minWidth="200dp"
        android:minHeight="50dp"
        android:progress="0"
        android:scaleY="4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="174dp"
        android:layout_height="73dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="300dp"
        android:text="@string/score"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="401dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:autoLink="all"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="10sp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="230dp"
        android:layout_marginTop="470dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/button1"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_marginStart="70dp"
        android:layout_marginTop="470dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/button"
        android:textStyle="bold" />
</RelativeLayout>